\name{NEWS}
\title{News for Package \pkg{oneClass}}
                          
\section{Version 1.0}{
\itemize{
\item Version 1.0 with basic functionalities as described in the manual.
}
}