@@ -1,7 +1,7 @@
 Package: oneClass
 Type: Package
 Title: One-class classification in the absence of test data
-Version: 0.3.1
+Version: 0.4.0
 Date: 2015-05-29
 Author: Benjamin Mack
 Maintainer: Benjamin Mack <knecmab@gmail.com>
