@@ -1,8 +1,16 @@
 \name{NEWS}
 \title{News for Package \pkg{oneClass}}
                           
-\section{Version 1.0}{
+\section{Version 0.4.0}{
 \itemize{
-\item Version 1.0 with basic functionalities as described in the manual.
+\item \code{consistent_ocsvm} now with grid refinement.
+}
+\section{Version 0.3.0}{
+\itemize{
+\item Added \code{consistent_ocsvm}.
+}
+\section{Version 0.2.0}{
+\itemize{
+\item Version 0.2.0 with basic functionalities as described in the notebook manual.
 }
 }
